# m-h-algorithm

./: .gitattributes  README.md  krakatit.txt  python-007-cipher.code-workspace  requirements.txt
MH_decipher/: README.md  bigrams.py  likelihood.py  mh_algorithm.py  plausibility.py  probability.py  pyproject.toml  requirements.txt  substitute_decrypt.py  substitute_encrypt.py
MH_decipher/MH_decipher/: bigrams.py  mh_algorithm.py  plausibility.py
MH_decipher/example-feature/: example-feature.txt
MH_decipher/src/mh_decipher/: mh_algorithm.py  mutate_key.py
MH_decipher/src/mh_decipher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
MH_decipher/test/: mh_decipher_test.py  mh_decipher_text.py  test_bigrams.py  test_likelihood.py  test_mutate_key.py  test_plausibility.py  test_probability.py
export/: text_1000_sample_10_key.txt  text_1000_sample_10_plaintext.txt  text_1000_sample_11_key.txt  text_1000_sample_11_plaintext.txt  text_1000_sample_12_key.txt  text_1000_sample_13_key.txt  text_1000_sample_13_plaintext.txt  text_1000_sample_14_key.txt  text_1000_sample_15_key.txt  text_1000_sample_16_key.txt  text_1000_sample_17_key.txt  text_1000_sample_18_key.txt  text_1000_sample_18_plaintext.txt  text_1000_sample_19_key.txt  text_1000_sample_1_key.txt  text_1000_sample_20_key.txt  text_1000_sample_2_key.txt  text_1000_sample_2_plaintext.txt  text_1000_sample_4_key.txt  text_1000_sample_4_plaintext.txt  text_1000_sample_5_key.txt  text_1000_sample_5_plaintext.txt  text_1000_sample_6_key.txt  text_1000_sample_6_plaintext.txt  text_1000_sample_7_key.txt  (+82 more)
(+4 files in other folders)
