[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mh_decipher"
version = "1.0.0"

requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.10.3",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "seaborn==0.13.2"
]

[tool.setuptools.packages.find]
where = ["src"]


[project.optional-dependencies]
dev = [
    "build",
    "pdoc"
]